--- a/main/static/main/css/list.css
+++ b/main/static/main/css/list.css
@@ -90,7 +90,7 @@
     align-items: center;
 }
 .product__image img {
-    height: 80%;
+    width: 80%;
     object-fit: cover;
 }
 .product__info {
