Проставил комментарии для ProfuctDetailView и улучшил читабельность кода. Добавил формы по поиску товаров другим страницам

--- a/main/static/main/css/product.css
+++ b/main/static/main/css/product.css
@@ -154,6 +154,10 @@
     color: var(--accent-color);
     font-weight: 500;
 }
+a {
+    color: #fff;
+    text-decoration: none;
+}
 
 @media (max-width: 1400px) {
     .product-main {
