--- a/main/templates/main/results.html
+++ b/main/templates/main/results.html
@@ -49,20 +49,22 @@
     
     <div class="products">
         <div class="products-main container">
-            <h1 class="products__title">Результаты поиска по запросу: <b class="title__value">Будильники Ядерные</b></h1>
+            <h1 class="products__title">Результаты поиска по запросу: <b class="title__value">{{ search_word }}</b></h1>
             <div class="products__filters">
-                <div class="filters__filter">
-                    <div class="filter__name">Цена От:</div>
-                    <input type="number" placeholder="0">
-                </div>
-                <div class="filters__filter">
-                    <div class="filter__name">Цена До:</div>
-                    <input type="number" placeholder="100000">
-                </div>
-                <button class="filters__accept">Применить</button>
+                <form method='get'>
+                    <div class="filters__filter">
+                        <div class="filter__name">Цена От:</div>
+                        {{ filterset.form.min_price}}
+                    </div>
+                    <div class="filters__filter">
+                        <div class="filter__name">Цена До:</div>
+                        {{ filterset.form.max_price }}
+                    </div>
+                    <button type='submit' class="filters__accept">Применить</button>
+                </form>
             </div>
             <div class="products__list">
-                {% for product in object_list %}
+                {% for product in page_obj %}
                 <div class="list__product">
                     
                     <div class="product__image">
