--- a/profile_user/templates/profile_user/profile.html
+++ b/profile_user/templates/profile_user/profile.html
@@ -17,15 +17,16 @@
     <title>Hack2024</title>
 </head>
 <body>
-    <div hidden id="value_status">{{ user.status }}</div>
+    <div hidden id="value_status">{{ profile.status }}</div>
     <div class="header">
         <div class="header-main container">
             <a href="{% url 'main' %}" class="header__logo">Kodopes</a>
             <div class="header-side">
-                <form class="header__search">
-                    <input type="text" required placeholder="Поиск">
-                    <button>
-                        <img src="{% static '/accounts/img/ui/search.svg' %}" alt="Искать">
+                <form class="header__search" method="post" action="{% url 'main' %}">
+                    {% csrf_token %}
+                    {{ form_search.search_field }}
+                    <button type="submit">
+                        <img src="{% static 'accounts/img/ui/search.svg' %}" alt="Искать">
                     </button>
                 </form>
                 <div class="header__nav">
@@ -53,7 +54,7 @@
     </div>
 
     <!-- Покупатель -->
-    <div class="profile_page profile_user " id="client">
+    <div class="profile_page profile_user" id="client">
         <div class="profile">
             <form class="profile-main container">
                 <label for="avatar_load" id="profile_avatar" class="profile__avatar" data-imgurl="{% static '/accounts/img/avatar.jpg' %}"></label>
@@ -61,11 +62,11 @@
                 <h1 class="profile__name" id="name_client">{{ profile.first_name }} {{ profile.last_name }}</h1>
                 <div class="field_line">
                     <div class="form__field">
-                        <h2 class="tab__title">Ваше имя: *</h2>
+                        <h2 class="tab__title">Имя: *</h2>
                         <input type="text" disabled value='{{ profile.first_name }}'>
                     </div>
                     <div class="form__field">
-                        <h2 class="tab__title">Ваша фамилия: *</h2>
+                        <h2 class="tab__title">Фамилия: *</h2>
                         <input type="text" disabled value='{{ profile.last_name }}'>
                     </div>
                 </div>
@@ -74,7 +75,7 @@
                     <input type="text" disabled value='{{ profile.username }}'>
                 </div>
                 <div class="form__field">
-                    <h2 class="tab__title">Ваш адрес: *</h2>
+                    <h2 class="tab__title">Адрес: *</h2>
                     <div class="checkboxes">
                         {% for address_user in address %}
                              <label class="checkbox">
@@ -93,7 +94,7 @@
             <form class="profile-main container" method="post">
                 <label for="avatar_load" id="company_avatar" class="profile__avatar" data-imgurl="{% static '/accounts/img/avatar.jpg' %}"></label>
                 <h1 class="profile__name">{{ profile.organization }}</h1>
-                
+                <div hidden>{{ form.username }}</div>
                 <div class="field_line">
                     <div class="form__field">
                         <h2 class="tab__title">Название компании: *</h2>
