--- a/profile_user/templates/profile_user/profile_update.html
+++ b/profile_user/templates/profile_user/profile_update.html
@@ -22,14 +22,15 @@
         <div class="header-main container">
             <a href="{% url 'main' %}" class="header__logo">Kodopes</a>
             <div class="header-side">
-                <form class="header__search">
-                    <input type="text" required placeholder="Поиск">
-                    <button>
-                        <img src="{% static '/accounts/img/ui/search.svg' %}" alt="Искать">
+                <form class="header__search" method="post" action="{% url 'main' %}">
+                    {% csrf_token %}
+                    {{ form_search.search_field }}
+                    <button type="submit">
+                        <img src="{% static 'accounts/img/ui/search.svg' %}" alt="Искать">
                     </button>
                 </form>
                 <div class="header__nav">
-                    <a href="{% url 'signup' %}" class="nav__account">
+                    <a href="{% url 'login' %}" class="nav__account">
                         <img src="{% static '/accounts/img/ui/user.svg' %}" alt="Аккаунт">
                     </a>
                     <a href="#" class="nav__vk">
@@ -56,6 +57,7 @@
     <div class="profile_page profile_user " id="client">
         <div class="profile">
             <form class="profile-main container" method='post'>
+                {{ form.errors }}
                 {% csrf_token %}
                 <label for="avatar_load" id="profile_avatar" class="profile__avatar" data-imgurl="{% static '/accounts/img/avatar.jpg' %}"></label>
 
@@ -118,7 +120,7 @@
                 {% csrf_token %}
                 <label for="avatar_load" id="company_avatar" class="profile__avatar" data-imgurl="{% static '/accounts/img/avatar.jpg' %}"></label>
                 <h1 class="profile__name">{{ user.organization }}</h1>
-                
+                <div hidden>{{ form.username }}</div>
                 <div class="field_line">
                     <div class="form__field">
                         <h2 class="tab__title">Название компании: *</h2>
