--- a/accounts/static/accounts/css/registry.css
+++ b/accounts/static/accounts/css/registry.css
@@ -3,7 +3,7 @@ body {
     overflow-x: hidden;
 }
 .registry {
-    background: url(../images/Pattern.svg);
+    background: url('/static/accounts/img/Pattern.svg');
     background-color: var(--accent50);
     padding-top: 8rem;
     padding-bottom: 8rem;
