--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -54,7 +54,7 @@
         <div class="cataloque-main container">
             <div class="cataloque__nav">
                 <a href="#">Товары</a>
-                <a href="#">Заказы</a>
+                <a href="{% url 'create' %}">Заказы</a>
             </div>
         </div>
     </div>
